--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -81,6 +81,7 @@ Text Domain: planet4-master-theme
 
 // Blocks
 @import "blocks/ActionsList";
+@import "blocks/PostsListBlock";
 
 // Hide WPML footer language switcher.
 .wpml-ls-statics-footer {
