PLANET-7240 Update new identity listing pages fonts
This is to comply with the designs

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -255,6 +255,9 @@
   --submenu-block-bullet-item--margin-inline-end: 0;
   --submenu-block-bullet-item--margin-inline-start: 16px;
   --submenu-block-number-item--margin-inline-start: 16px;
+  --query-list-item-meta--font-family: var(--font-family-tertiary);
+  --wp-block-query-pagination--font-family: var(--font-family-tertiary);
+  --wp-block-query-pagination--font-weight: var(--font-weight-semibold);
 }
 
 h1,
