--- a/templates/search.twig
+++ b/templates/search.twig
@@ -113,27 +113,56 @@
                                                             </div>
                                                         </div>
                                                     {% endif %}
-                                                    {% if ( page_types|length > 0 ) %}
+                                                    {% if ( post_types|length > 0 ) %}
                                                         <div class="filteritem">
                                                             <a data-bs-toggle="collapse" href="#item-modal-category" aria-expanded="true">
                                                                 {{ __( 'Post Type', 'planet4-master-theme' ) }} <span></span>
                                                             </a>
                                                             <div id="item-modal-category" class="collapse show" role="tabpanel">
                                                                 <ul class="list-unstyled">
-                                                                    {% for page_type in page_types %}
-                                                                        {% if ( page_type.results > 0 ) %}
+                                                                    {% for post_type in post_types %}
+                                                                        {% if ( post_type.results > 0 ) %}
                                                                             <li>
                                                                                 <label class="custom-control">
                                                                                     <input
                                                                                         type="checkbox"
-                                                                                        name="f[ptype][{{ page_type.name }}]"
-                                                                                        value="{{ page_type.term_id }}"
+                                                                                        name="f[ptype][{{ post_type.name }}]"
+                                                                                        value="{{ post_type.term_id }}"
                                                                                         class="p4-custom-control-input modal-checkbox"
                                                                                         data-ga-category="Search Page"
                                                                                         data-ga-action="Post Type Filter"
-                                                                                        data-ga-label="{{ page_type.name|e('wp_kses_post')|raw }}"
-                                                                                        {{ page_type.checked }} {{ page_type.results > 0 ? '' : 'disabled' }} />
-                                                                                    <span class="custom-control-description">{{ page_type.name }} ({{ page_type.results }})</span>
+                                                                                        data-ga-label="{{ post_type.name|e('wp_kses_post')|raw }}"
+                                                                                        {{ post_type.checked }} {{ post_type.results > 0 ? '' : 'disabled' }} />
+                                                                                    <span class="custom-control-description">{{ post_type.name }} ({{ post_type.results }})</span>
+                                                                                </label>
+                                                                            </li>
+                                                                        {% endif %}
+                                                                    {% endfor %}
+                                                                </ul>
+                                                            </div>
+                                                        </div>
+                                                    {% endif %}
+                                                    {% if ( action_types|length > 0 ) %}
+                                                        <div class="filteritem">
+                                                            <a data-bs-toggle="collapse" href="#item-modal-action" aria-expanded="true">
+                                                                {{ __( 'Action Type', 'planet4-master-theme' ) }} <span></span>
+                                                            </a>
+                                                            <div id="item-modal-action" class="collapse show" role="tabpanel">
+                                                                <ul class="list-unstyled">
+                                                                    {% for id, action_type in action_types %}
+                                                                        {% if ( action_type.results > 0 ) %}
+                                                                            <li>
+                                                                                <label class="custom-control">
+                                                                                    <input
+                                                                                        type="checkbox"
+                                                                                        name="f[ptype][{{ action_type.name }}]"
+                                                                                        value="{{ id }}"
+                                                                                        class="p4-custom-control-input modal-checkbox"
+                                                                                        data-ga-category="Search Page"
+                                                                                        data-ga-action="Content Filter"
+                                                                                        data-ga-label="{{ action_type.name|e('wp_kses_post')|raw }}"
+                                                                                        {{ action_type.checked }} {{ action_type.results > 0 ? '' : 'disabled' }} />
+                                                                                    <span class="custom-control-description">{{ action_type.name }} ({{ action_type.results }})</span>
                                                                                 </label>
                                                                             </li>
                                                                         {% endif %}
