Add background color back to texts
- Wrongly removed

--- a/assets/src/scss/base/_palette.scss
+++ b/assets/src/scss/base/_palette.scss
@@ -18,12 +18,16 @@ $palette: (
 
 @each $name, $color in $palette {
   .has-#{$name}-color {
+    color: #{$color};
+
     --transparent-button--border-color: #{$color};
     --transparent-button--color: #{$color};
     --transparent-button--hover--background: #{$color};
   }
 
   .has-#{$name}-background-color {
+    background-color: #{$color};
+
     --transparent-button--hover--color: #{$color};
     --transparent-button--active--color: #{$color};
   }
