PLANET-7329 Fix Take Action boxout button styles
Following the new identity release, these styles were a bit off

--- a/templates/blocks/take-action-boxout.twig
+++ b/templates/blocks/take-action-boxout.twig
@@ -38,7 +38,7 @@
 			</div>
 			{% if ( boxout.link and boxout.link_text ) %}
 				<a
-					class="btn btn-action btn-block cover-card-btn"
+					class="btn btn-primary"
 					data-ga-category="Take Action Boxout"
 					data-ga-action="Call to Action"
 					data-ga-label="n/a"
