Remove unnecessary 'btn-block' button class
It doesn't do anything

--- a/templates/blocks/carousel_header_full-width-classic.twig
+++ b/templates/blocks/carousel_header_full-width-classic.twig
@@ -50,7 +50,7 @@
 												{% if slide.link_text %}
 													<a href="{{ slide.link_url }}"
 															{{  'true' == slide.link_url_new_tab ? 'target="_blank"' }}
-														class="btn btn-primary btn-block"
+														class="btn btn-primary"
 														data-ga-category="Carousel Header"
 														data-ga-action="Call to Action"
 														data-ga-label="Slide {{ loop.index }}">
