--- a/templates/blocks/enform/tease-thankyou.twig
+++ b/templates/blocks/enform/tease-thankyou.twig
@@ -24,7 +24,7 @@
 				</div>
 
 				<div class="form-group">
-					<a href="{{ fields.donatelink }}" class="btn btn-primary btn-block">{{ fields.donate_text }}</a>
+					<a href="{{ fields.donatelink }}" class="btn btn-primary">{{ fields.donate_text }}</a>
 				</div>
 			{% endif %}
 
