--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -81,7 +81,7 @@ Text Domain: planet4-master-theme
 
 // Blocks
 @import "blocks/ActionsList";
-@import "blocks/PostsListBlock";
+@import "blocks/PostsList";
 
 // Hide WPML footer language switcher.
 .wpml-ls-statics-footer {
