--- a/assets/src/scss/pages/_listing-page.scss
+++ b/assets/src/scss/pages/_listing-page.scss
@@ -310,3 +310,47 @@
     margin: 0 $sp-5 0 !important;
   }
 }
+
+.wp-block-separator.listing-page-separator {
+  border-width: 1px;
+  border-bottom-color: var(--color-border-separator);
+  margin: $sp-3 0;
+
+  @include medium-and-up {
+    margin: $sp-5 0;
+  }
+}
+
+.listing-page-title {
+  margin-bottom: $sp-3;
+
+  h2 {
+    margin-bottom: 0;
+  }
+
+  @include medium-and-up {
+    margin-bottom: $sp-5;
+  }
+}
+
+.grid-view-toggle,
+.list-view-toggle {
+  display: none;
+
+  @include medium-and-up {
+    display: block;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 150ms linear;
+
+    .icon {
+      height: 40px;
+      width: 40px;
+      top: 0;
+    }
+
+    &:hover {
+      background-color: var(--grey-200);
+    }
+  }
+}
