--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -49,6 +49,7 @@ Text Domain: planet4-master-theme
 @import "layout/page-section";
 @import "layout/skewed-overlay";
 @import "layout/tables";
+@import "layout/featured-action";
 
 // Pages
 @import "pages/page";
