--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -13,6 +13,16 @@
                     <span aria-label="hashtag">#</span>{{ tag_name|e('wp_kses_post')|raw }}
                 </h1>
                 <div class="page-header-content">{{ tag_description|e('wp_kses_post')|raw }}</div>
+                {% if ( featured_action ) %}
+                    {% include 'featured-action.twig'
+                        with {
+                            'image': featured_action_image,
+                            'post_title': featured_action.post_title,
+                            'post_excerpt': featured_action.post_excerpt,
+                            'url': featured_action_url
+                        }
+                    %}
+                {% endif %}
             </div>
             <div class="pull-right d-none d-md-block">
                 <div class="sharethis-inline-share-buttons"></div>
