PLANET-7349 Rotate breadcrumbs arrow in RTL sites
It needs to be pointing the other way

--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -50,5 +50,9 @@
     background-repeat: no-repeat;
     background-color: var(--gp-green-800);
     display: inline-block;
+
+    html[dir="rtl"] & {
+      rotate: 180deg;
+    }
   }
 }
