--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -21,6 +21,7 @@
 @import "layout/breadcrumbs";
 @import "layout/forms";
 @import "layout/gravity-forms";
+@import "layout/query-loop-overrides";
 
 @import "editorOverrides";
 
