--- a/templates/listing-page.twig
+++ b/templates/listing-page.twig
@@ -10,5 +10,4 @@
     </span>
 </div>
 
-<div id="grid-view" class="d-none">{{ grid_content|raw }}</div>
-<div id="list-view">{{ list_content|raw }}</div>
+<div>{{ listing_page_content|raw }}</div>
