--- a/templates/all-actions.twig
+++ b/templates/all-actions.twig
@@ -5,7 +5,7 @@
     <div class="skewed-overlay"></div>
 
     <div class="page-content container">
-        {% if list_content and grid_content %}
+        {% if listing_page_content %}
             {% include 'listing-page.twig' with { listing_page_title: __( 'All actions', 'planet4-master-theme' ) } %}
         {% else %}
             <h3>{{ __( 'Results', 'planet4-master-theme' ) }}</h3>
