--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -17,7 +17,7 @@
     {% set is_action = taxonomy.taxonomy == 'action-type' %}
 
     <div class="page-content container">
-        {% if list_content and grid_content %}
+        {% if listing_page_content %}
             {% include 'listing-page.twig' with {
                 listing_page_title: is_action ? __( 'All actions', 'planet4-master-theme' ) : __( 'All articles', 'planet4-master-theme' )
             } %}
