PLANET-7273 Add toggle button to show listing pages list or grid view (#2154)
This commit also removes the ListingPageGridView feature flag and associated code

--- a/templates/all-actions.twig
+++ b/templates/all-actions.twig
@@ -5,8 +5,8 @@
     <div class="skewed-overlay"></div>
 
     <div class="page-content container">
-        {% if query_loop %}
-            {{ query_loop|raw }}
+        {% if listing_page_content %}
+            {% include 'listing-page.twig' with { listing_page_title: __( 'All actions', 'planet4-master-theme' ) } %}
         {% else %}
             <h3>{{ __( 'Results', 'planet4-master-theme' ) }}</h3>
 
