--- a/assets/src/scss/pages/_listing-page.scss
+++ b/assets/src/scss/pages/_listing-page.scss
@@ -7,17 +7,6 @@
   }
 }
 
-.query-list-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-top: var(--query-list--item--margin-top, $sp-4);
-
-  @include medium-and-up {
-    flex-direction: row;
-  }
-}
-
 .query-list-item-image {
   flex-basis: 30%;
 
@@ -176,6 +165,17 @@
 
   // Only applied to "list" layout
   &.wp-block-query--list {
+    .wp-block-post {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      margin-top: $sp-4;
+
+      @include medium-and-up {
+        flex-direction: row;
+      }
+    }
+
     .query-list-item-body {
       @include medium-and-up {
         padding-inline-start: $sp-2x;
@@ -196,6 +196,11 @@
   // Only applied to "grid" layout
   &.wp-block-query--grid {
     .wp-block-post-template {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 1.25em;
+
       li {
         @include small-and-up {
           width: calc((100% / 2) - 1.25em + (1.25em / 2)) !important;
@@ -308,5 +313,49 @@
 
   @include large-and-up {
     margin: 0 $sp-5 0 !important;
+  }
+}
+
+.wp-block-separator.listing-page-separator {
+  border-width: 1px;
+  border-bottom-color: var(--color-border-separator);
+  margin: $sp-3 0;
+
+  @include medium-and-up {
+    margin: $sp-5 0;
+  }
+}
+
+.listing-page-title {
+  margin-bottom: $sp-3;
+
+  h2 {
+    margin-bottom: 0;
+  }
+
+  @include medium-and-up {
+    margin-bottom: $sp-5;
+  }
+}
+
+.grid-view-toggle,
+.list-view-toggle {
+  display: none;
+
+  @include medium-and-up {
+    display: block;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 150ms linear;
+
+    .icon {
+      height: 40px;
+      width: 40px;
+      top: 0;
+    }
+
+    &:hover {
+      background-color: var(--grey-200);
+    }
   }
 }
