--- a/templates/all-posts.twig
+++ b/templates/all-posts.twig
@@ -5,8 +5,8 @@
     <div class="skewed-overlay"></div>
 
     <div class="page-content container">
-        {% if query_loop %}
-            {{ query_loop|raw }}
+        {% if listing_page_content %}
+            {% include 'listing-page.twig' %}
         {% else %}
             <h3>{{ __( 'Results', 'planet4-master-theme' ) }}</h3>
 
