Split Cookies Block files
This is for better performance since now the files will only be loaded when they are needed. This should be changed before moving the block to the theme.

--- a/assets/src/styles/blocks/Cookies/Cookies.scss
+++ b/assets/src/styles/blocks/Cookies/Cookies.scss
@@ -1,3 +1,6 @@
+@import "../../master-theme/assets/src/scss/base/variables";
+@import "../../master-theme/assets/src/scss/base/mixins";
+
 .cookies-block {
   .custom-control-description,
   .custom-control input[type="checkbox"] ~ .custom-control-description {
