PLANET-7302 Move Cookies block into master theme
This commit also includes a few other things:
- style updates for the new identity
- script renaming for the enqueuing
- creation of a blocks scss file to remove some code duplication
- reflection of some variables from PHP to JS

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -28,9 +28,9 @@
 @import "base/css-variables";
 
 // Blocks
-@import "blocks/ActionsList";
-@import "blocks/PostsList";
-@import "blocks/CarouselHeader/CarouselHeaderStyle";
+@import "blocks";
+
+// Blocks editor styles
 @import "blocks/CarouselHeader/CarouselHeaderEditorStyle";
-@import "blocks/Accordion/AccordionStyle";
 @import "blocks/Accordion/AccordionEditorStyle";
+@import "blocks/Cookies/CookiesEditorStyle";
