--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -81,10 +81,7 @@ Text Domain: planet4-master-theme
 @import "base/css-variables";
 
 // Blocks
-@import "blocks/ActionsList";
-@import "blocks/PostsList";
-@import "blocks/CarouselHeader/CarouselHeaderStyle";
-@import "blocks/Accordion/AccordionStyle";
+@import "blocks";
 
 // Hide WPML footer language switcher.
 .wpml-ls-statics-footer {
