PLANET-7237 Apply the Design tokens font-family & font-size on certain blocks (#1167)
- Added new font family and size tokens for Cookies blocks
- Other blocks seem to be up to date already

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -223,6 +223,8 @@
         }
 
         p {
+          font-family: var(--font-family-tertiary);
+
           @include x-large-and-up {
             font-size: $font-size-sm;
           }
