PLANET-7276 Add a 'back to News & stories' link to listing pages
This is for the new IA, it should be added to Tag, Category and Post Type listing pages

--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -36,6 +36,26 @@
     &:not(:only-child):not(:last-child):not(.page-type) {
       margin-inline-end: $sp-1;
     }
+
+    &.back-to-news::before {
+      content: "";
+      pointer-events: none;
+      margin-inline-end: $sp-1;
+      height: 12px;
+      width: 7px;
+      mask-image: url("../../images/chevron.svg");
+      mask-repeat: no-repeat;
+      mask-size: contain;
+      mask-position: center;
+      background-repeat: no-repeat;
+      background-color: var(--gp-green-800);
+      display: inline-block;
+      rotate: 180deg;
+
+      html[dir="rtl"] & {
+        rotate: 0deg;
+      }
+    }
   }
 
   .main-tag-chevron {
