--- a/templates/tag.twig
+++ b/templates/tag.twig
@@ -8,6 +8,11 @@
                     {% if ( category_name ) %}
                         <a class="tag-item tag-item--main" href="{{ category_link|default('#') }}">{{ category_name|e('wp_kses_post')|raw }}</a>
                     {% endif %}
+                    {% if ( news_page_link ) %}
+                        <a class="back-to-news tag-item" href="{{ news_page_link }}">
+                            {{__( 'News & stories', 'planet4-master-theme' )}}
+                        </a>
+                    {% endif %}
                 </div>
                 <h1 class="page-header-title">
                     <span aria-label="hashtag">#</span>{{ tag_name|e('wp_kses_post')|raw }}
