PLANET-7301 Move CarouselHeader into master-theme
Ref: https://jira.greenpeace.org/browse/PLANET-7301

- Should work exactly as before

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -30,3 +30,5 @@
 // Blocks
 @import "blocks/ActionsList";
 @import "blocks/PostsList";
+@import "blocks/CarouselHeader/CarouselHeaderStyle";
+@import "blocks/CarouselHeader/CarouselHeaderEditorStyle";
