--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -83,6 +83,7 @@ Text Domain: planet4-master-theme
 // Blocks
 @import "blocks/ActionsList";
 @import "blocks/PostsList";
+@import "blocks/CarouselHeader/CarouselHeaderStyle";
 
 // Hide WPML footer language switcher.
 .wpml-ls-statics-footer {
