PLANET-7300: Move Accordion block into master theme
Ref: https://jira.greenpeace.org/browse/PLANET-7300

Similar behaviour as it is within the plugin

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -32,3 +32,5 @@
 @import "blocks/PostsList";
 @import "blocks/CarouselHeader/CarouselHeaderStyle";
 @import "blocks/CarouselHeader/CarouselHeaderEditorStyle";
+@import "blocks/Accordion/AccordionStyle";
+@import "blocks/Accordion/AccordionEditorStyle";
