--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -84,6 +84,7 @@ Text Domain: planet4-master-theme
 @import "blocks/ActionsList";
 @import "blocks/PostsList";
 @import "blocks/CarouselHeader/CarouselHeaderStyle";
+@import "blocks/Accordion/AccordionStyle";
 
 // Hide WPML footer language switcher.
 .wpml-ls-statics-footer {
