--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -3,3 +3,4 @@
 @import "blocks/CarouselHeader/CarouselHeaderStyle";
 @import "blocks/Accordion/AccordionStyle";
 @import "blocks/Cookies/CookiesStyle";
+@import "blocks/Counter/CounterStyle";
