PLANET-7303 Move Spreadsheet block into master theme
- Moved all needed files for Spreadsheet into master theme
- Restructured some files to match structure from plugin repo

--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -4,3 +4,4 @@
 @import "blocks/Accordion/AccordionStyle";
 @import "blocks/Cookies/CookiesStyle";
 @import "blocks/Counter/CounterStyle";
+@import "blocks/Spreadsheet";
