--- a/assets/src/scss/blocks/ActionsList.scss
+++ b/assets/src/scss/blocks/ActionsList.scss
@@ -1,28 +1,44 @@
 .actions-list {
-  // TODO: Review this logic and standarize the code between all layouts
-  &:not(.is-custom-layout-carousel) {
-    margin-bottom: $sp-4;
+  margin-bottom: $sp-4;
 
-    .wp-block-post {
-      box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
-      transition: box-shadow 0.2s;
-      border-radius: 4px;
-      background: white;
-      cursor: pointer;
-      overflow: hidden;
-      justify-content: space-between;
+  .wp-block-post {
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
+    transition: box-shadow 0.2s;
+    border-radius: 4px;
+    background: var(--white);
+    cursor: pointer;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 490px;
+
+    &:hover {
+      box-shadow: 0 1px 8px rgba(0, 0, 0, 0.32);
+    }
+
+    .read-more-nav {
       display: flex;
-      flex-direction: column;
+      justify-content: flex-end;
+      margin-top: auto;
 
-      &:hover {
-        box-shadow: 0 1px 8px rgba(0, 0, 0, 0.32);
+      a {
+        margin-bottom: 0;
+        margin-inline-end: 0;
       }
     }
 
-    .wp-block-group.is-layout-flow {
-      padding: $sp-3;
-      height: 100%;
+    & > *:first-child:not(.wp-block-post-featured-image) {
+      // This padding-top is added only when the figure is not being rendered
+      padding-top: calc(196px + $sp-3);
+
+      @include large-and-up {
+        padding-top: calc(220px + $sp-3);
+      }
     }
+  }
+
+  .wp-block-group.is-layout-flow {
+    padding: $sp-3;
   }
 
   .wp-block-post-title {
