--- a/assets/src/scss/layout/_query-loop-overrides.scss
+++ b/assets/src/scss/layout/_query-loop-overrides.scss
@@ -1,4 +1,3 @@
-// Beta stylesheet
 .p4-query-loop {
   & > .wp-block-group {
     position: relative;
@@ -17,38 +16,6 @@
       margin: 0 0 48px 0 !important;
     }
 
-    .wp-block-post {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 0;
-      min-height: 490px;
-      transition: box-shadow 0.2s;
-      border-radius: 4px;
-      background: var(--white);
-      box-shadow: 0 1px 8px rgba($grey-900, 0.16);
-      cursor: pointer;
-
-      // Applied to content
-      .wp-block-group:first-of-type {
-        padding: 24px;
-      }
-
-      .wp-block-post-featured-image {
-        overflow: hidden;
-        border-radius: 4px 4px 0 0;
-      }
-
-      .read-more-nav {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: auto;
-      }
-
-      &:hover {
-        box-shadow: 0 1px 14px rgba($grey-900, .3);
-      }
-    }
-
     .carousel-indicators {
       display: none;
     }
@@ -56,22 +23,14 @@
     @include medium-and-less {
       .carousel {
         overflow: hidden;
-        padding: $sp-x;
+        padding: $sp-x $sp-x $sp-x 0;
       }
 
-      .wp-block-post-template {
+      .carousel-inner {
         display: flex;
         overflow-x: scroll;
         scrollbar-width: none;
         scroll-behavior: smooth;
-      }
-
-      .wp-block-post {
-        width: 354px;
-
-        &:not(:last-child) {
-          margin-inline-end: $sp-1x;
-        }
       }
 
       .carousel-item {
@@ -83,6 +42,14 @@
         .carousel-item-wrapper {
           display: flex;
           padding: $sp-x;
+
+          .wp-block-post {
+            width: 354px;
+
+            &:not(:last-child) {
+              margin-inline-end: $sp-1x;
+            }
+          }
         }
       }
     }
