PLANET-7306: Move Take Action Boxout block into master-theme
Ref: https://jira.greenpeace.org/browse/PLANET-7306

- Same behavior as the one from the plugin
- Include stylesheet updated with tokens

--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -6,3 +6,4 @@
 @import "blocks/Counter/CounterStyle";
 @import "blocks/Spreadsheet";
 @import "blocks/Submenu/SubmenuStyle";
+@import "blocks/TakeActionBoxout/TakeActionBoxoutStyle.scss";
