--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -35,3 +35,4 @@
 @import "blocks/Accordion/AccordionEditorStyle";
 @import "blocks/Cookies/CookiesEditorStyle";
 @import "blocks/Submenu/SubmenuEditorStyle.scss";
+@import "blocks/TakeActionBoxout/TakeActionBoxoutEditorStyle.scss";
