Improve the Happypoint block to be more consistent with the rest of P4 Blocks
- Rename stylesheets
- Move potentially shared hooks to a different dir
- Export function instead of class when registered
- Create hooks directory
- Replace all the ocurrencies of HappyPoint with Happypoint
- Register data endpoint
- Make the namespace more consistent
- Make sure to not call the api when the image id is undefined

--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -7,4 +7,4 @@
 @import "blocks/Spreadsheet";
 @import "blocks/Submenu/SubmenuStyle";
 @import "blocks/TakeActionBoxout/TakeActionBoxoutStyle.scss";
-@import "blocks/Happypoint";
+@import "blocks/Happypoint/HappypointStyle";
