--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -36,4 +36,4 @@
 @import "blocks/Cookies/CookiesEditorStyle";
 @import "blocks/Submenu/SubmenuEditorStyle.scss";
 @import "blocks/TakeActionBoxout/TakeActionBoxoutEditorStyle.scss";
-@import "blocks/HappypointEditor";
+@import "blocks/Happypoint/HappypointEditorStyle";
