PLANET-7394: Fix missin up-down arrow icon in CarouselHeader
Ref: https://jira.greenpeace.org/browse/PLANET-7394

Fix image's path

--- a/assets/src/scss/blocks/CarouselHeader/SidebarSlidesEditor.scss
+++ b/assets/src/scss/blocks/CarouselHeader/SidebarSlidesEditor.scss
@@ -95,7 +95,7 @@
     width: 100%;
     height: 100%;
     background-size: 9px 9px;
-    background-image: url("../../public/images/icons/chevron.svg");
+    background-image: url("../../images/chevron.svg");
     background-repeat: no-repeat;
     background-position: center;
     transform-origin: center;
