PLANET-7382 Move Submenu block into master theme
- Moved the Submenu block to master theme with associated funcctions

--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -5,3 +5,4 @@
 @import "blocks/Cookies/CookiesStyle";
 @import "blocks/Counter/CounterStyle";
 @import "blocks/Spreadsheet";
+@import "blocks/Submenu/SubmenuStyle";
