--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -34,3 +34,4 @@
 @import "blocks/CarouselHeader/CarouselHeaderEditorStyle";
 @import "blocks/Accordion/AccordionEditorStyle";
 @import "blocks/Cookies/CookiesEditorStyle";
+@import "blocks/Submenu/SubmenuEditorStyle.scss";
