--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -50,6 +50,7 @@ Text Domain: planet4-master-theme
 @import "layout/skewed-overlay";
 @import "layout/tables";
 @import "layout/featured-action";
+@import "layout/wide-blocks";
 
 // Pages
 @import "pages/page";
