--- a/templates/author.twig
+++ b/templates/author.twig
@@ -17,39 +17,7 @@
         </div>
     </header>
 
-    <div class="page-content container">
-        {% if listing_page_content %}
-            {% include 'listing-page.twig' with { listing_page_title: __( 'All articles by ', 'planet4-master-theme' ) ~ author.name } %}
-        {% else %}
-            <div class="wp-block-separator is-style-wide listing-page-separator"></div>
-            <h2>{{ __( 'All articles by ', 'planet4-master-theme' ) }} {{ author.name }}</h2>
-            <div class="row">
-                <div class="col-lg-8 multiple-search-result">
-                    <ul class="list-unstyled">
-                        {% for post in posts %}
-                            {% include 'tease-author.twig' %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-
-            {% if posts.pagination.total > 1 %}
-                <div class="row">
-                    <div class="col-md-12 col-lg-5 col-xl-5 mt-3">
-                        <button
-                                data-content=".multiple-search-result .list-unstyled"
-                                data-page="1"
-                                data-total="{{ posts.pagination.total }}"
-                                data-url="{{ author.path }}"
-                                class="load-more-mt btn btn-small btn-secondary mb-5"
-                                data-ga-category="Articles List"
-                                data-ga-action="Load More Button"
-                                data-ga-label="n/a">
-                            {{ __( 'Load More', 'planet4-master-theme' ) }}
-                        </button>
-                    </div>
-                </div>
-            {% endif %}
-        {% endif %}
-    </div>
+    {% include 'listing-page.twig' with {
+        listing_page_title: __( 'All articles by ', 'planet4-master-theme' ) ~ author.name
+    } %}
 {% endblock %}
