--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -32,41 +32,9 @@
         </div>
     </header>
 
-    <div class="page-content container">
-        {% if listing_page_content %}
-            {% include 'listing-page.twig' with {
-                listing_page_title: is_action ? __( 'All actions', 'planet4-master-theme' ) : __( 'All articles', 'planet4-master-theme' )
-            } %}
-        {% else %}
-            <h3>{{ __( 'Results', 'planet4-master-theme' ) }}</h3>
-
-            <div class="row">
-                <div class="col-lg-8 multiple-search-result">
-                    <ul class="list-unstyled">
-                        {% for post in posts %}
-                            {% include 'tease-taxonomy-post.twig' %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-
-            {% if posts.pagination.total > 1 %}
-                <div class="row">
-                    <div class="col-md-12 col-lg-5 col-xl-5 mt-3">
-                        <button
-                                data-content=".multiple-search-result .list-unstyled"
-                                data-page="1"
-                                data-total="{{ posts.pagination.total }}"
-                                data-url="{{ fn('get_term_link', taxonomy.term_id ) }}"
-                                class="load-more-mt btn btn-small btn-secondary mb-5"
-                                data-ga-category="Articles List"
-                                data-ga-action="Load More Button"
-                                data-ga-label="n/a">
-                            {{ __( 'Load More', 'planet4-master-theme' ) }}
-                        </button>
-                    </div>
-                </div>
-            {% endif %}
-        {% endif %}
-    </div>
+    {% include 'listing-page.twig' with {
+        listing_page_title: is_action ?
+            __( 'All actions', 'planet4-master-theme' ) :
+            __( 'All articles', 'planet4-master-theme' )
+    } %}
 {% endblock %}
