PLANET-7378: Move the Happypoint block into master-theme (#2184)
* PLANET-7378: Move the Happypoint block into master-theme

Ref: https://jira.greenpeace.org/browse/PLANET-7378

Same behavior as the one from the plugin

* Improve the Happypoint block to be more consistent with the rest of P4 Blocks

- Rename stylesheets
- Create hooks directory
- Move potentially shared hooks to a different directory
- Export function instead of a class when it is registered
- Replace all the occurrences of HappyPoint with Happypoint
- Register data endpoint. Now passing fields instead of passing id to avoid wrong params format
- Make the namespace more consistent
- Make sure to not call the API when the image id is undefined
- Iframe remove deprecated props. It affects to frameBorder and scrolling

---------

Co-authored-by: Dan Tovbein <dtovbein@gmail.com>

--- a/assets/src/scss/editorStyle.scss
+++ b/assets/src/scss/editorStyle.scss
@@ -36,3 +36,4 @@
 @import "blocks/Cookies/CookiesEditorStyle";
 @import "blocks/Submenu/SubmenuEditorStyle.scss";
 @import "blocks/TakeActionBoxout/TakeActionBoxoutEditorStyle.scss";
+@import "blocks/Happypoint/HappypointEditorStyle";
