--- a/assets/src/scss/blocks.scss
+++ b/assets/src/scss/blocks.scss
@@ -7,3 +7,4 @@
 @import "blocks/Spreadsheet";
 @import "blocks/Submenu/SubmenuStyle";
 @import "blocks/TakeActionBoxout/TakeActionBoxoutStyle.scss";
+@import "blocks/Happypoint/HappypointStyle";
