Updates after WP 6.4 fix merge
The layout is now set in the post template block

--- a/assets/src/scss/layout/_query-loop-overrides.scss
+++ b/assets/src/scss/layout/_query-loop-overrides.scss
@@ -24,6 +24,10 @@
       display: none;
     }
 
+    .carousel-inner {
+      display: flex;
+    }
+
     @include medium-and-less {
       .carousel {
         overflow: hidden;
@@ -31,7 +35,6 @@
       }
 
       .carousel-inner {
-        display: flex;
         overflow-x: scroll;
         scrollbar-width: none;
         scroll-behavior: smooth;
