Fix editor styles
These are small adjustments

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -414,7 +414,7 @@ input.describe[type=text][data-setting=caption] {
 }
 
 // Posts List Block Override
-.posts-list {
+.posts-list:not(.is-custom-layout-carousel) {
   .wp-block-post-template.is-layout-flow li {
     height: 240px;
     margin-bottom: 12px;
@@ -443,10 +443,8 @@ input.describe[type=text][data-setting=caption] {
   .is-layout-flow > .is-layout-flow {
     margin-top: -36px;
   }
-}
 
-@media (max-width: 991px) {
-  .posts-list {
+  @media (max-width: 991px) {
     .wp-block-post-title,
     .wp-block-post-excerpt {
       margin-top: -12px;
@@ -461,6 +459,10 @@ input.describe[type=text][data-setting=caption] {
 // Override Query Loop within editor
 .is-custom-layout-carousel {
   flex-direction: column;
+
+  .wp-block-columns {
+    margin-top: 0;
+  }
 
   & > .wp-block-heading.rich-text {
     margin-bottom: 0;
@@ -483,26 +485,22 @@ input.describe[type=text][data-setting=caption] {
     }
   }
 
-  .carousel-controls {
-    .carousel-control-prev,
-    .carousel-control-next {
-      .wp-block-button__link {
-        display: none !important;
-      }
-    }
-  }
-
+  .carousel-controls,
   .wp-block-query-pagination {
     display: none !important;
   }
 
   @include large-and-up {
-    .wp-block-post {
+    &.actions-list .wp-block-post {
       flex-basis: calc((100% / 3) - $sp-2);
+    }
 
-      &:not(:last-child) {
-        margin-inline-end: $sp-3;
-      }
+    &.posts-list .wp-block-post {
+      flex-basis: calc(25% - $sp-2);
+    }
+
+    .wp-block-post:not(:last-child) {
+      margin-inline-end: $sp-3;
     }
   }
 }
